--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,8 @@
     --cor-destaque: #0AFFEB;
     --cor-subtitulo: #778899;
     --cor-secundaria: #1696FF;
-    --cor-background: #050710;
+    /* --cor-background: #050710; */
+    --cor-background: #2b2a33;
     --cor-background-2: #0a0e24;
     --cor-preto: #000;
 }
