--- a/css/style.css
+++ b/css/style.css
@@ -354,6 +354,10 @@ h2{
     color: var(--subtitulo);
     text-align: center;
 }
+h3{
+    color: var(--secundaria);
+    text-align: center;
+}
 p{
     color: var(--p);
 }
@@ -365,7 +369,7 @@ p{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
     padding: 0 1.25rem;
 }
 .boas-vindas{
@@ -412,13 +416,63 @@ p{
     color: var(--secundaria);
     font-size: 2rem;
 }
-#sobre-mim{
+
+#bg-sobre-mim{
+    background-image: url(../img/hacker.jpeg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
     display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
+    min-width: 100%;
     height: 100vh;
 }
+
+#sobre-mim{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    padding: 1.25rem;
+}
+
+.container-sobre{
+    /* background-color: #778899; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* max-width: 1000px;
+    max-height: 25.5rem; */
+}
+
+.container-img-sobremim{
+    /* background-color: #778899; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+}
+
+.container-img-sobremim img{
+    /* max-width: 25rem; */
+    max-width: 100%;
+    border: 1px solid var(--destaque);
+    border-radius: 50%;
+    /* ANIMAR BORDA */
+}
+
+.container-texto-sobremim{
+    width: 100%;
+}
+
+.container-texto-sobremim p{
+    text-align: justify;
+    text-indent: 30px;
+    padding: 1.25rem;
+}
+
 #skills{
     display: flex;
     flex-direction: column;
